--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.12.0",
     "react-calendar": "^3.1.0",
     "react-collapsible": "^2.8.0",
+    "react-confirm-alert": "^2.6.1",
     "react-date-picker": "^8.0.1",
     "react-dom": "^16.12.0",
     "react-flags-select": "^1.1.13",
