--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^3.2.0",
     "react-select": "^3.1.0",
     "react-select-country-list": "^2.2.1",
+    "react-super-responsive-table": "^5.1.1",
     "react-tooltip": "^4.2.7",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
