--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-select": "^3.1.0",
     "react-select-country-list": "^2.2.1",
     "react-super-responsive-table": "^5.1.1",
+    "react-toggle": "^4.1.1",
     "react-tooltip": "^4.2.7",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
