--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "bootstrap": "^4.4.1",
     "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
+    "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
     "react-calendar": "^3.1.0",
     "react-collapsible": "^2.8.0",
     "react-confirm-alert": "^2.6.1",
     "react-date-picker": "^8.0.1",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
     "react-popper-tooltip": "^3.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-select": "^3.1.0",
     "react-select-country-list": "^2.2.1",
+    "react-stripe-checkout": "^2.6.3",
     "react-super-responsive-table": "^5.1.1",
     "react-toggle": "^4.1.1",
     "react-tooltip": "^4.2.7",
