--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.8.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "draft-js": "^0.11.7",
     "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
@@ -16,6 +17,7 @@
     "react-confirm-alert": "^2.6.1",
     "react-date-picker": "^8.0.1",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
     "react-popper-tooltip": "^3.1.0",
