--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.8.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "device": "^0.3.11",
     "google-maps-react": "^2.0.6",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
