--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@cometchat-pro/chat": "^2.0.12",
-    "@material-ui/core": "^4.8.3",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.7",
     "google-maps-react": "^2.0.6",
+    "highcharts": "^8.2.0",
+    "highcharts-react-official": "^3.0.0",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
