--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.7",
     "google-maps-react": "^2.0.6",
+    "highcharts": "^8.2.0",
+    "highcharts-react-official": "^3.0.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
