--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-flags-select": "^1.1.13",
     "react-list-drag-and-drop": "^0.9.2",
     "react-popper-tooltip": "^3.1.0",
+    "react-quill": "^1.3.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
