--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.7",
+    "dwv": "^0.27.0",
     "google-maps-react": "^2.0.6",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
