--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-draft-wysiwyg": "^1.14.5",
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
+    "react-geocode": "^0.2.1",
     "react-list-drag-and-drop": "^0.9.2",
     "react-popper-tooltip": "^3.1.0",
     "react-quill": "^1.3.5",
