--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-flags-select": "^1.1.13",
     "react-geocode": "^0.2.1",
     "react-list-drag-and-drop": "^0.9.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-popper-tooltip": "^3.1.0",
     "react-quill": "^1.3.5",
     "react-rating-stars-component": "^2.2.0",
