--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.28.0",
     "react-burger-menu": "^2.7.1",
     "react-calendar": "^3.1.0",
     "react-collapsible": "^2.8.0",
