--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "google-maps-react": "^2.0.6",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
+    "html-to-draftjs": "^1.5.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
