--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@cometchat-pro/chat": "^2.1.0",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.9.1",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.5.0",
     "antd": "^4.6.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
