--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-toggle": "^4.1.1",
     "react-tooltip": "^4.2.7",
     "reactstrap": "^8.4.1",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-localstorage-simple": "^2.1.6",
     "redux-state-sync": "^3.1.1",
