--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@cometchat-pro/chat": "^2.1.5-beta1",
+    "@cometchat-pro/chat": "^2.1.6",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.9.1",
     "@stripe/react-stripe-js": "^1.1.2",
@@ -13,6 +13,7 @@
     "bootstrap": "^4.4.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "dwv": "^0.27.1",
     "google-maps-react": "^2.0.6",
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
