--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
     "react-geocode": "^0.2.1",
+    "react-inner-image-zoom": "^1.3.0",
     "react-list-drag-and-drop": "^0.9.2",
     "react-places-autocomplete": "^7.3.0",
     "react-popper-tooltip": "^3.1.0",
