Point 3 and 11 in Additional features

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-      "baseUrl": "./src"
+      "baseUrl": "./src",
+      "target": "es2019"
     },
     "include": ["src"]
   }
