--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
     "react-select": "^3.1.0",
     "react-select-country-list": "^2.2.1",
     "react-stripe-checkout": "^2.6.3",
@@ -75,5 +74,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.12.13"
   }
 }
