--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.6.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "browser-image-compression": "^1.0.14",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "dwv": "^0.27.1",
@@ -33,6 +34,7 @@
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
     "react-geocode": "^0.2.1",
+    "react-image-file-resizer": "^0.4.2",
     "react-inner-image-zoom": "^1.3.0",
     "react-list-drag-and-drop": "^0.9.2",
     "react-places-autocomplete": "^7.3.0",
