--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
     "html-to-draftjs": "^1.5.0",
+    "image-to-base64": "^2.2.0",
     "jquery": "^3.5.1",
+    "js-file-download": "^0.4.12",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
