--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "highcharts": "^8.2.0",
     "highcharts-react-official": "^3.0.0",
     "html-to-draftjs": "^1.5.0",
-    "image-to-base64": "^2.2.0",
     "jquery": "^3.5.1",
-    "js-file-download": "^0.4.12",
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
@@ -33,6 +31,7 @@
     "react-date-picker": "^8.0.1",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
     "react-geocode": "^0.2.1",
@@ -44,6 +43,8 @@
     "react-quill": "^1.3.5",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.0",
+    "react-resizable": "^1.11.1",
+    "react-resizable-custom": "^1.8.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
