--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-big-calendar": "^0.28.1",
     "react-burger-menu": "^2.7.1",
     "react-calendar": "^3.1.0",
