--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-resizable-custom": "^1.8.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-scrollbar": "^0.5.6",
     "react-select": "^3.1.0",
     "react-select-country-list": "^2.2.1",
     "react-stripe-checkout": "^2.6.3",
