--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-collapsible": "^2.8.0",
     "react-confirm-alert": "^2.6.1",
     "react-date-picker": "^8.0.1",
+    "react-debounce-input": "^3.2.5",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.5",
     "react-draggable": "^4.4.3",
