--- a/package.json
+++ b/package.json
@@ -92,5 +92,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.13.8"
-  }
+  },
+  "homepage": "https://virtualhospital.aimedis.io"
 }
