--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "browser-image-compression": "^1.0.14",
-    "dotenv": "^10.0.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "dwv": "^0.27.1 ",
@@ -38,6 +37,7 @@
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
     "react-geocode": "^0.2.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-image-file-resizer": "^0.4.2",
     "react-inner-image-zoom": "^1.3.0",
     "react-list-drag-and-drop": "^0.9.2",
@@ -45,6 +45,7 @@
     "react-popper-tooltip": "^3.1.0",
     "react-quill": "^1.3.5",
     "react-rating-stars-component": "^2.2.0",
+    "react-recaptcha-v3": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-resizable": "^1.11.1",
     "react-resizable-custom": "^1.8.5",
