--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "redux-localstorage-simple": "^2.1.6",
     "redux-state-sync": "^3.1.1",
     "redux-thunk": "^2.3.0",
-    "swiper": "^6.7.5"
+    "swiper": "^6.7.5",
+    "write-file-p": "^1.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
