--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-debounce-input": "^3.2.5",
     "react-dom": "^16.12.0",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-drag-drop-container": "^6.1.1",
     "react-draggable": "^4.4.3",
     "react-dropzone": "^11.0.3",
     "react-flags-select": "^1.1.13",
