--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-switch-case": "^1.5.1",
     "react-toggle": "^4.1.1",
     "react-tooltip": "^4.2.7",
+    "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.4.1",
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
