--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-super-responsive-table": "^5.1.1",
     "react-switch-case": "^1.5.1",
+    "react-to-print": "^2.14.2",
     "react-toggle": "^4.1.1",
     "react-tooltip": "^4.2.7",
     "reactjs-popup": "^2.0.5",
