All changes given by rupali after deploy

--- a/package.json
+++ b/package.json
@@ -101,5 +101,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.13.8"
   },
-  "homepage": "https://virtualhospital.aimedis.io"
+  "homepage": "https://aimedix.com"
 }
