--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-list-drag-and-drop": "^0.9.2",
     "react-places-autocomplete": "^7.3.0",
     "react-popper-tooltip": "^3.1.0",
+    "react-qr-barcode-scanner": "^1.0.6",
     "react-quill": "^1.3.5",
     "react-rating-stars-component": "^2.2.0",
     "react-recaptcha-v3": "^2.0.1",
