--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_STRIPE=pk_live_SUaxHsAUa2ebLQXAa7NoMwPQ
 REACT_APP_USERNAME=vh-user
 REACT_APP_PASSWORD=user@vh123#
 REACT_RECAPTCHA=6Lfgib4cAAAAAKWDXLFxlUQ8o4zb529nqkP0k1b3
+SKIP_PREFLIGHT_CHECK=true
