--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-resizable": "^1.11.1",
     "react-resizable-custom": "^1.8.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.4",
     "react-scrollbar": "^0.5.6",
     "react-select": "^3.1.0",
     "react-select-country-list": "^2.2.1",
@@ -77,6 +77,7 @@
     "redux-localstorage-simple": "^2.1.6",
     "redux-state-sync": "^3.1.1",
     "redux-thunk": "^2.3.0",
+    "start": "^5.1.0",
     "styled-components": "^5.3.3",
     "swiper": "^6.7.5"
   },
@@ -84,7 +85,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint":"eslint src/**/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -102,7 +104,11 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.13.8"
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-react": "^7.28.0"
   },
   "homepage": "https://virtualhospital.aimedis.io"
 }
