--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true,
+        "commonjs": true
     },
     "extends": [
         "eslint:recommended",
@@ -18,5 +20,6 @@
         "react"
     ],
     "rules": {
+        "linebreak-style": 0
     }
 }
