--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint":"eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "lint-fix": "eslint src/**/*.js --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -107,7 +108,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.13.8",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.8.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.28.0"
   },
   "homepage": "https://virtualhospital.aimedis.io"
