--- a/package.json
+++ b/package.json
@@ -113,5 +113,5 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint-plugin-react": "^7.28.0"
   },
-  "homepage": "https://aimedix.com"
+  "homepage": "https://virtualhospital.aimedis.io"
 }
