--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "start": "^5.1.0",
     "styled-components": "^5.3.3",
     "swiper": "^6.7.5",
-    "text-editor-react": "^1.0.3"
+    "text-editor-react": "^1.0.3",
+    "webpack": "4.42.0"
   },
   "scripts": {
     "start": "react-scripts start",
